--- a/index.html
+++ b/index.html
@@ -107,7 +107,27 @@
             </div>
 
         </section>
+        <!-- great tea section -->
+        <section class="my-24 gap-12 flex flex-col lg:flex-row">
+          <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+            <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+            <div class="row-span-2 rounded-xl bg-orange-100 flex justify-center"><img src="images/fresh-1.png" alt=""></div>
+            <div class="row-span-2 rounded-xl bg-lime-200 flex justify-center items-center"><img src="images/fresh-2.png" alt=""></div>
+            <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
 
+
+          </div>
+          <div class="space-y-1 flex-1">
+            <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h5 class="text-xl font-extrabold mt-8">Unique Taste</h5>
+            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h5 class="text-xl font-extrabold mt-8">Premium Quality</h5>
+            <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+
+          </div>
+
+        </section>
     </main>
     <footer>
 
